# tinyrender_code

./: .gitignore  Cargo.toml  README.md  meson.build
draw/: .gitignore  Cargo.toml
draw/benches/: benchmark.rs
draw/src/: lib.rs  line.rs  triangle.rs
renderer/: constant.hh  meson.build  renderer.cc  renderer.hh
src/: main.rs
test/: meson.build  test_line.cc
tgaimage/: Cargo.toml  README.md  test.tga
tgaimage/src/: lib.rs
utils/: meson.build  ppm.cc  ppm.hh  test.cc  types.hh
