[package]
name = "tinyrender"
version = "0.1.0"
authors = ["Frefreak <frefreak.zxy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgaimage = { path = "tgaimage" }
draw = { path = "draw" }
wavefront = "0.2.2"
rand = "0.8.4"

[workspace]
members = ["tgaimage", "draw"]

[profile.release]
debug = 1
