[package]
name = "draw"
version = "0.1.0"
authors = ["Frefreak <frefreak.zxy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgaimage = { path = "../tgaimage" }

[dev-dependencies]
criterion = "0.3"
tgaimage = { path = "../tgaimage" }

[[bench]]
name = "benchmark"
harness = false
